@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.videovideo.dk" version="2.0.1" name="videovideo.dk HD" provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.videovideo.dk" version="2.0.2" name="videovideo.dk HD" provider-name="twinther [tommy@winther.nu]">
     <requires>
         <import addon="xbmc.python" version="2.0"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
+        <import addon="script.module.buggalo" version="1.0.1"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
         <provides>video</provides>
