@@ -3,17 +3,6 @@
     <string id="30000">Generelt</string>
     <string id="30001">Vis teasers nedenunder shows</string>
 
-    <string id="99980">Game over, man! [I]Game over![/I]</string>
-    <string id="99981">You can't handle the truth!</string>
-    <string id="99982">Danger Will Robinson</string>
-    <string id="99983">Why does it cry, Sméagol?</string>
-    <string id="99984">Houston, we have a problem...</string>
-    <string id="99985">E.T. phone home</string>
-
-    <string id="99990">Der er desværre opstået en fejl i addon'en.</string>
-    <string id="99991">Du kan hjælpe med at løse fejlen ved at indsende en</string>
-    <string id="99992">fejlrapport. Der sendes ikke personlige oplysninger.</string>
-    <string id="99993">Indsend fejlrapport</string>
-    <string id="99994">Indsend ikke</string>
-    <string id="99995">Tak!</string>
+    <string id="30900">Der er sket en fejl i kommunikationen med</string>
+    <string id="30901">videovideo.dk. Prøv igen senere. Fejlen er:</string>
 </strings>
