@@ -3,17 +3,6 @@
     <string id="30000">General</string>
     <string id="30001">Show teasers below shows</string>
 
-    <string id="99980">Game over, man! [I]Game over![/I]</string>
-    <string id="99981">You can't handle the truth!</string>
-    <string id="99982">Danger Will Robinson</string>
-    <string id="99983">Why does it cry, Sméagol?</string>
-    <string id="99984">Houston, we have a problem...</string>
-    <string id="99985">E.T. phone home</string>
-
-    <string id="99990">Unfortunately an error occurred in the addon.</string>
-    <string id="99991">You can help with fixing the problem by submitting</string>
-    <string id="99992">an error report. No personal information is sent.</string>
-    <string id="99993">Submit error report</string>
-    <string id="99994">Don't submit</string>
-    <string id="99995">Thank you!</string>
+    <string id="30900">There was an error while communication with</string>
+    <string id="30901">videovideo.dk. Please try again later. Error message:</string>
 </strings>
