@@ -1,4 +1,8 @@
-[B]Version 2.0.1[/B]
+[B]Version 2.0.2 - 2012-08-27[/B]
+- Now using script.module.buggalo
+- Improve error handling of communication issues
+
+[B]Version 2.0.1 - 2012-08-26[/B]
 - Added language tag to addon.xml
 
 [B]Version 2.0.0 - 2012-01-01[/B]
